--- a/snippet/table.html
+++ b/snippet/table.html
@@ -30,5 +30,5 @@
 		<td>2130</td>
 	</tr>
 	</tr>
-	<caption>Exempel tabell från en gammal uppgift. Även tabellerna är automatiskt numrerade.</caption>
+	<caption>Example table.</caption>
 </table>
