--- a/snippet/img.html
+++ b/snippet/img.html
@@ -1,7 +1,8 @@
 <img
-	    src="<++>"
-	    alt="<++>"
-	    width="<++>"
-	    height="<++>"
-	    class="<++>"
-	    style="<++>">
+src="<++>"
+alt="<++>"
+width="<++>"
+height="<++>"
+class="<++>"
+style="<++>"
+>
