--- a/snippet/skeleton.html
+++ b/snippet/skeleton.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="<++>">
-		<link rel="icon" href="<++>">
+		<link rel="icon" href="/favicon.ico">
 		<meta name="description" content="<++>">
 		<title><++></title>
 	</head>
